--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{ include = "simple_text_chart" }]
 python = "^3.6"
 
 [tool.poetry.dev-dependencies]
+pytest-cov = "^3.0.0"
+pytest-watch = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
